Changed the name of the app

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
       <main>
         <section class="top-section">
           <div class="colloquiums">
-            <h2>Frontend</h2>
+            <h2>AmaliTech</h2>
           </div>
           <div class="results">
-            <h2>Results</h2>
+            <h2>Student Performance Tracker</h2>
             <div id="studentResults"></div>
           </div>
           <div class="file-upload">
