Minor name change

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Student Performance Tracker</title>
+    <title>Trainee Performance Tracker</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -14,7 +14,7 @@
             <h2>AmaliTech</h2>
           </div>
           <div class="results">
-            <h2>Student Performance Tracker</h2>
+            <h2>Trainee Performance Tracker</h2>
             <div id="studentResults"></div>
           </div>
           <div class="file-upload">
@@ -25,7 +25,7 @@
 
         <section class="bottom-section">
           <div class="left-panel">
-            <h2>Student List</h2>
+            <h2>Trainee List</h2>
             <div id="studentList"></div>
             <button id="rankStudents">Rank Students</button>
             <div id="rankedStudents"></div>
