modified colloquim h2 to include component logo symbol

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
       <main>
         <section class="top-section">
           <div class="colloquiums">
-            <h2>AmaliTech</h2>
+            <!-- <h2>AmaliTech</h2> -->
+            <h2>AmaliT 
+              <span class="logo"> 
+                <div class="amalitech_logo"></div>
+                <div class="amalitech_logo"></div>
+                <div class="amalitech_logo"></div> 
+              </span> 
+            ch</h2>
           </div>
           <div class="results">
             <h2>Trainee Performance Tracker</h2>
