Redesigned the student detail page

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
         <section class="top-section">
           <div class="colloquiums">
             <!-- <h2>AmaliTech</h2> -->
-            <h2>AmaliT 
-              <span class="logo"> 
+            <h2>
+              AmaliT
+              <span class="logo">
                 <div class="amalitech_logo"></div>
                 <div class="amalitech_logo"></div>
-                <div class="amalitech_logo"></div> 
-              </span> 
-            ch</h2>
+                <div class="amalitech_logo"></div>
+              </span>
+              ch
+            </h2>
           </div>
           <div class="results">
             <h2>Trainee Performance Tracker</h2>
@@ -65,6 +67,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
