Adds a 'students needing support' feature

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trainee Performance Tracker</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -53,6 +56,10 @@
               </div>
             </div>
             <div id="rankedStudents" class="ranked-students-list"></div>
+            <div id="supportNeededSection" class="support-needed-section">
+              <h3>Students Needing Support</h3>
+              <div id="supportNeededList"></div>
+            </div>
           </div>
 
           <div class="right-panel">
