--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <div class="trainee-header">
                 <h2>Trainees</h2>
                 <button id="rankStudentsBtn" class="rank-students-btn">
-                  <i class="fas fa-sort-amount-down"></i> Rank Students
+                  <i class="fas fa-sort-amount-down"></i> Rank Trainees
                 </button>
               </div>
               <div id="traineeList" class="trainee-list">
@@ -57,7 +57,7 @@
             </div>
             <div id="rankedStudents" class="ranked-students-list"></div>
             <div id="supportNeededSection" class="support-needed-section">
-              <h3>Students Needing Support</h3>
+              <h3>Trainees Needing Support</h3>
               <div id="supportNeededList"></div>
             </div>
           </div>
@@ -69,12 +69,12 @@
               <select id="weekNumber"></select>
               <!-- <button id="addWeek">Add Week</button> -->
             </div>
-            <div id="weeklyChart" class="chart-container">
-              <canvas></canvas>
-              <!-- <button class="export-btn" data-chart="weekly">
-                Export Weekly Chart
-              </button> -->
+            <div class="chart-box">
+              <div id="weeklyChart" class="chart-container">
+                <canvas></canvas>
+              </div>
             </div>
+
             <div id="studentTrendCharts"></div>
           </div>
         </section>
